# file-manager

./: .gitignore  README.md  meson.build
include/: fm-application.h  fm-sidebar.h  fm-window.h
resources/ui/: fm.gresource.xml  window.ui
src/: application.c  fm-application.c  fm-sidebar.c  fm-window.c  main.c  window.c
